k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: termai-cicd
  namespace: term-ai
  labels:
    app: termai-cicd
spec:
  type: ClusterIP
  selector:
    app: termai-cicd
  ports:
    - name: http
      port: 80
      targetPort: 8101
      protocol: TCP
