k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: termai-cicd
  namespace: term-ai
  labels:
    app.kubernetes.io/name: termai-cicd
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: termai
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-csiro
    kubernetes.io/ingress.allow-http: "false"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - termai-cicd.dw.csiro.au
      secretName: termai-cicd-tls
  rules:
    - host: termai-cicd.dw.csiro.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: termai-cicd
                port:
                  number: 80
